common/namespaces.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: hello


apiVersion: v1
kind: Namespace
metadata:
  name: hello
---
apiVersion: v1
kind: Namespace
metadata:
  name: code-exec
